// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RouteStopsTable /> Renders the route with stops in case it has journery pattern 1`] = `
<DocumentFragment>
  <table
    class="h-1 w-full undefined"
    data-testid="routeStopsTable1"
  >
    <tbody>
      <tr
        class="border border-white bg-background undefined"
      >
        <td
          class="border-l-8 py-4 pl-16 pr-4 text-3xl font-bold"
        >
          65 itään
        </td>
        <td
          class="text-3xl"
        />
        <td>
          Voimassa 1.1.2021 - 13.12.2023
        </td>
        <td>
          <div
            class="flex flex-row items-center"
          >
            !14.2.2017 klo 14.51
            <svg
              class="ml-2 inline text-xl text-tweaked-brand"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0V0z"
                fill="none"
              />
              <path
                d="M13 3a9 9 0 00-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42A8.954 8.954 0 0013 21a9 9 0 000-18zm-1 5v5l4.25 2.52.77-1.28-3.52-2.09V8z"
              />
            </svg>
          </div>
        </td>
        <td
          class="w-20 border-l-4 border-r-4 border-white"
        >
          <button
            class="text-center h-full w-full"
            data-testid="RouteStopsHeaderRow::showRoute"
            type="button"
          >
            <svg
              class="text-5xl text-tweaked-brand inline text-center"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M18 8c0-3.31-2.69-6-6-6S6 4.69 6 8c0 4.5 6 11 6 11s6-6.5 6-11zm-8 0c0-1.1.9-2 2-2s2 .9 2 2a2 2 0 11-4 0zM5 20v2h14v-2H5z"
              />
            </svg>
          </button>
        </td>
        <td
          class="w-20"
        >
          <button
            class="h-full w-full text-center"
            data-testid="RouteStopsHeaderRow::toggleAccordion"
            type="button"
          >
            <svg
              class="inline text-center text-3xl text-tweaked-brand"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
              />
            </svg>
          </button>
        </td>
      </tr>
      <tr
        class="border border-l-8 undefined"
      >
        <td
          class="py-4 pl-16 pr-4"
        >
          pysäkki A
        </td>
        <td>
          !Pysäkki X
        </td>
        <td>
          Voimassa 1.1.2021 - 13.12.2023
        </td>
        <td>
          <div
            class="flex flex-row items-center"
          >
            !14.2.2017 klo 14.51
            <svg
              class="ml-2 inline text-xl text-tweaked-brand"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0V0z"
                fill="none"
              />
              <path
                d="M13 3a9 9 0 00-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42A8.954 8.954 0 0013 21a9 9 0 000-18zm-1 5v5l4.25 2.52.77-1.28-3.52-2.09V8z"
              />
            </svg>
          </div>
        </td>
        <td>
           
        </td>
        <td>
          ...
        </td>
      </tr>
      <tr
        class="border border-l-8 undefined"
      >
        <td
          class="py-4 pl-16 pr-4"
        >
          pysäkki B
        </td>
        <td>
          !Pysäkki X
        </td>
        <td>
          Voimassa 1.1.2021 - 13.12.2023
        </td>
        <td>
          <div
            class="flex flex-row items-center"
          >
            !14.2.2017 klo 14.51
            <svg
              class="ml-2 inline text-xl text-tweaked-brand"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0V0z"
                fill="none"
              />
              <path
                d="M13 3a9 9 0 00-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42A8.954 8.954 0 0013 21a9 9 0 000-18zm-1 5v5l4.25 2.52.77-1.28-3.52-2.09V8z"
              />
            </svg>
          </div>
        </td>
        <td>
           
        </td>
        <td>
          ...
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`<RouteStopsTable /> Renders the route without stops in case it does not have a journery pattern 1`] = `
<DocumentFragment>
  <table
    class="h-1 w-full undefined"
    data-testid="routeStopsTable1"
  >
    <tbody>
      <tr
        class="border border-white bg-background undefined"
      >
        <td
          class="border-l-8 py-4 pl-16 pr-4 text-3xl font-bold"
        >
          65 itään
        </td>
        <td
          class="text-3xl"
        />
        <td>
          Voimassa 1.1.2021 - 13.12.2023
        </td>
        <td>
          <div
            class="flex flex-row items-center"
          >
            !14.2.2017 klo 14.51
            <svg
              class="ml-2 inline text-xl text-tweaked-brand"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0V0z"
                fill="none"
              />
              <path
                d="M13 3a9 9 0 00-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42A8.954 8.954 0 0013 21a9 9 0 000-18zm-1 5v5l4.25 2.52.77-1.28-3.52-2.09V8z"
              />
            </svg>
          </div>
        </td>
        <td
          class="w-20 border-l-4 border-r-4 border-white"
        >
          <button
            class="text-center h-full w-full"
            data-testid="RouteStopsHeaderRow::showRoute"
            type="button"
          >
            <svg
              class="text-5xl text-tweaked-brand inline text-center"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M18 8c0-3.31-2.69-6-6-6S6 4.69 6 8c0 4.5 6 11 6 11s6-6.5 6-11zm-8 0c0-1.1.9-2 2-2s2 .9 2 2a2 2 0 11-4 0zM5 20v2h14v-2H5z"
              />
            </svg>
          </button>
        </td>
        <td
          class="w-20"
        >
          <button
            class="h-full w-full text-center"
            data-testid="RouteStopsHeaderRow::toggleAccordion"
            type="button"
          >
            <svg
              class="inline text-center text-3xl text-tweaked-brand"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
              />
            </svg>
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
